Attempt at fixing case study block grid's width on mobile

--- a/assets/scss/objects/_container-case-studies.scss
+++ b/assets/scss/objects/_container-case-studies.scss
@@ -18,8 +18,8 @@
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 1rem;
 
-    @include breakpoint(from-medium--upto-large) {
-      width: 100%;
+    @include breakpoint(upto-large) {
+      width: 100% !important;
     }
   }
 }
